plugins {
    id 'java'
    id 'org.springframework.boot' version('3.3.1')
    id 'io.spring.dependency-management' version('1.1.5')
    id 'com.diffplug.spotless' version('6.25.0')
}

group = 'com.asdf.minilog'
version = '0.0.1-dev'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
dependencies {

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //spring boot web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // swagger ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    annotationProcessor 'org.projectlombok:lombok'
    compileOnly('org.projectlombok:lombok')
}

tasks.named('test'){
    useJUnitPlatform()
    testLogging{
        events  "passed", "skipped", "failed"
        outputs.upToDateWhen { false}
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}

spotless {
    java {
        googleJavaFormat('1.22.0').reflowLongStrings()
    }
}

build.dependsOn 'spotlessApply'